--- a/notebooks/Deploy.ipynb
+++ b/notebooks/Deploy.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
     "-cnn intensities_spatial_softmax\n",
     "--codebook_size 32\n",
     "-vq\n",
-    "--vq_reduction 3\n",
+    "--vq_reduction 2\n",
     "'''.split())\n",
     "\n",
     "# args = parser.parse_args('''\n",
@@ -393,16 +393,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Namespace(actor_layer_size=32, batch_size=2, beta=3e-05, bucket_name='lfp_europe_west4_a', bulk_datasets=None, bulk_split=0, cnn_type='intensities_spatial_softmax', codebook_size=32, colab=True, data_source='DRIVE', device='GPU', discrete=True, encode_all=True, encoder_layer_size=16, fp16=False, from_tfrecords=True, gcbc=False, goal_mapper_layer_size=512, goal_space_dim=32, gripper_images=False, gripper_img_embedding_size=32, images=True, images2=False, img_embedding_size=64, lang_split=0, latent_dim=32, learning_rate=0.0003, normalize=False, num_distribs=5, planner_layer_size=16, qbits=None, resume=False, run_name='pybullet_2048_b002_lim_intensities_spatial_softmax', sentence_embedding_size=512, sim='Pybullet', standard_split=0, sub_out_language_percent=0.25, temperature=0.1, test_datasets=['pybullet/UR5_slow_gripper_test'], tpu_name=None, train_datasets=['pybullet/UR5', 'pybullet/UR5_high_transition', 'pybullet/UR5_slow_gripper'], train_steps=200000, use_contrastive=False, use_language=False, video_datasets=None, video_split=0, vq_reduction=3, window_size_max=48, window_size_min=20)"
+       "Namespace(actor_layer_size=32, batch_size=2, beta=3e-05, bucket_name='lfp_europe_west4_a', bulk_datasets=None, bulk_split=0, cnn_type='intensities_spatial_softmax', codebook_size=32, colab=True, data_source='DRIVE', device='GPU', discrete=True, encode_all=True, encoder_layer_size=16, fp16=False, from_tfrecords=True, gcbc=False, goal_mapper_layer_size=512, goal_space_dim=32, gripper_images=False, gripper_img_embedding_size=32, images=True, images2=False, img_embedding_size=64, lang_split=0, latent_dim=32, learning_rate=0.0003, normalize=False, num_distribs=5, planner_layer_size=16, qbits=None, resume=False, run_name='pybullet_2048_b002_lim_intensities_spatial_softmax', sentence_embedding_size=512, sim='Pybullet', standard_split=0, sub_out_language_percent=0.25, temperature=0.1, test_datasets=['pybullet/UR5_slow_gripper_test'], tpu_name=None, train_datasets=['pybullet/UR5', 'pybullet/UR5_high_transition', 'pybullet/UR5_slow_gripper'], train_steps=200000, use_contrastive=False, use_language=False, video_datasets=None, video_split=0, vq_reduction=2, window_size_max=48, window_size_min=20)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,16 +418,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 160,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "actor, encoder, planner, cnn, gripper_cnn,  img_embed_to_goal_space, lang_embed_to_goal_space, trainer =lfp.train.train_setup(args, dl, GLOBAL_BATCH_SIZE, strategy=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,22 +453,236 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(), dtype=float32, numpy=10.489649>"
+       "<tf.Tensor: shape=(2, 12, 32), dtype=float32, numpy=\n",
+       "array([[[-0.05985726,  0.00243747, -0.24709015, -0.06607522,\n",
+       "         -0.15851544, -0.00227016, -0.21131991,  0.16945201,\n",
+       "         -0.1540303 ,  0.12721136, -0.19546618, -0.06724542,\n",
+       "          0.05696294,  0.23455265, -0.20354068,  0.08565512,\n",
+       "         -0.24144283, -0.2833395 , -0.09890223, -0.22305942,\n",
+       "          0.22087654, -0.25269154,  0.14626807, -0.20269841,\n",
+       "         -0.02899206, -0.25739598, -0.22183615, -0.2704598 ,\n",
+       "          0.29074255,  0.07005033,  0.29857358, -0.26034033],\n",
+       "        [-0.05985726,  0.00243747, -0.24709015, -0.06607522,\n",
+       "         -0.15851544, -0.00227016, -0.21131991,  0.16945201,\n",
+       "         -0.1540303 ,  0.12721136, -0.19546618, -0.06724542,\n",
+       "          0.05696294,  0.23455265, -0.20354068,  0.08565512,\n",
+       "         -0.24144283, -0.2833395 , -0.09890223, -0.22305942,\n",
+       "          0.22087654, -0.25269154,  0.14626807, -0.20269841,\n",
+       "         -0.02899206, -0.25739598, -0.22183615, -0.2704598 ,\n",
+       "          0.29074255,  0.07005033,  0.29857358, -0.26034033],\n",
+       "        [-0.05985726,  0.00243747, -0.24709015, -0.06607522,\n",
+       "         -0.15851544, -0.00227016, -0.21131991,  0.16945201,\n",
+       "         -0.1540303 ,  0.12721136, -0.19546618, -0.06724542,\n",
+       "          0.05696294,  0.23455265, -0.20354068,  0.08565512,\n",
+       "         -0.24144283, -0.2833395 , -0.09890223, -0.22305942,\n",
+       "          0.22087654, -0.25269154,  0.14626807, -0.20269841,\n",
+       "         -0.02899206, -0.25739598, -0.22183615, -0.2704598 ,\n",
+       "          0.29074255,  0.07005033,  0.29857358, -0.26034033],\n",
+       "        [-0.05985726,  0.00243747, -0.24709015, -0.06607522,\n",
+       "         -0.15851544, -0.00227016, -0.21131991,  0.16945201,\n",
+       "         -0.1540303 ,  0.12721136, -0.19546618, -0.06724542,\n",
+       "          0.05696294,  0.23455265, -0.20354068,  0.08565512,\n",
+       "         -0.24144283, -0.2833395 , -0.09890223, -0.22305942,\n",
+       "          0.22087654, -0.25269154,  0.14626807, -0.20269841,\n",
+       "         -0.02899206, -0.25739598, -0.22183615, -0.2704598 ,\n",
+       "          0.29074255,  0.07005033,  0.29857358, -0.26034033],\n",
+       "        [ 0.01541346,  0.11852235, -0.14439313, -0.01267442,\n",
+       "         -0.10515355,  0.02101034, -0.06811492,  0.25110325,\n",
+       "         -0.12765777,  0.1759265 ,  0.16077691,  0.07604599,\n",
+       "         -0.14089356,  0.28870508, -0.19722205,  0.05539867,\n",
+       "          0.02113605, -0.02869153,  0.0951716 , -0.08459158,\n",
+       "         -0.01387522,  0.00713572,  0.24635622,  0.15190619,\n",
+       "          0.12529081, -0.19920605,  0.01943478, -0.14316534,\n",
+       "          0.0960274 , -0.13637936, -0.15268263,  0.19919023],\n",
+       "        [ 0.01541346,  0.11852235, -0.14439313, -0.01267442,\n",
+       "         -0.10515355,  0.02101034, -0.06811492,  0.25110325,\n",
+       "         -0.12765777,  0.1759265 ,  0.16077691,  0.07604599,\n",
+       "         -0.14089356,  0.28870508, -0.19722205,  0.05539867,\n",
+       "          0.02113605, -0.02869153,  0.0951716 , -0.08459158,\n",
+       "         -0.01387522,  0.00713572,  0.24635622,  0.15190619,\n",
+       "          0.12529081, -0.19920605,  0.01943478, -0.14316534,\n",
+       "          0.0960274 , -0.13637936, -0.15268263,  0.19919023],\n",
+       "        [-0.05185664,  0.0483959 , -0.11458448,  0.01865432,\n",
+       "          0.19842884,  0.19726273,  0.12354684, -0.12222596,\n",
+       "         -0.28013775, -0.0653031 ,  0.00867385, -0.00560725,\n",
+       "          0.11367425, -0.16372935,  0.2200366 , -0.10885365,\n",
+       "         -0.19277647,  0.20752445,  0.29022667,  0.15266067,\n",
+       "          0.03068796, -0.05527538, -0.04874149, -0.14474098,\n",
+       "          0.04464489, -0.22826317, -0.24957684, -0.18328851,\n",
+       "         -0.26627365, -0.03878713,  0.2758521 ,  0.16237053],\n",
+       "        [-0.05185664,  0.0483959 , -0.11458448,  0.01865432,\n",
+       "          0.19842884,  0.19726273,  0.12354684, -0.12222596,\n",
+       "         -0.28013775, -0.0653031 ,  0.00867385, -0.00560725,\n",
+       "          0.11367425, -0.16372935,  0.2200366 , -0.10885365,\n",
+       "         -0.19277647,  0.20752445,  0.29022667,  0.15266067,\n",
+       "          0.03068796, -0.05527538, -0.04874149, -0.14474098,\n",
+       "          0.04464489, -0.22826317, -0.24957684, -0.18328851,\n",
+       "         -0.26627365, -0.03878713,  0.2758521 ,  0.16237053],\n",
+       "        [-0.11615428, -0.12333404,  0.21450296,  0.11492443,\n",
+       "          0.22095606, -0.23797129, -0.15389736,  0.2292994 ,\n",
+       "          0.20550391,  0.2123808 , -0.20890053,  0.13592574,\n",
+       "         -0.00772339, -0.30171597, -0.29249367,  0.27042124,\n",
+       "         -0.15749453,  0.02520648,  0.19440338, -0.26032785,\n",
+       "         -0.03070852, -0.28346395,  0.25361636,  0.28774193,\n",
+       "         -0.20295069,  0.24343798, -0.20237604,  0.24652067,\n",
+       "         -0.28588867,  0.23491207, -0.25231487, -0.10910879],\n",
+       "        [ 0.06701195,  0.16159329, -0.05861413, -0.19758399,\n",
+       "         -0.11190537, -0.07353492, -0.11480305, -0.18312114,\n",
+       "         -0.11113361,  0.07206354, -0.01786885,  0.01682699,\n",
+       "         -0.11389755, -0.03501832, -0.00818446,  0.27723977,\n",
+       "         -0.2683359 , -0.05969928, -0.27893728,  0.20278469,\n",
+       "          0.2842385 , -0.23386239,  0.2568526 , -0.15466014,\n",
+       "         -0.27130556, -0.23863019, -0.19512671, -0.21653476,\n",
+       "         -0.26151824, -0.24035577, -0.2921718 ,  0.0382486 ],\n",
+       "        [ 0.00920936,  0.12228152, -0.05938144,  0.10539612,\n",
+       "         -0.12555464, -0.03658995,  0.03007555,  0.26152542,\n",
+       "         -0.01042074,  0.00745684, -0.21265677, -0.10280585,\n",
+       "          0.04152399, -0.25930408,  0.11871469, -0.18807517,\n",
+       "         -0.00619394, -0.23642075, -0.19838297, -0.2850147 ,\n",
+       "          0.08168325, -0.27253008, -0.27585548, -0.24084175,\n",
+       "          0.01787776,  0.04529199, -0.08464852, -0.0311166 ,\n",
+       "         -0.04688829,  0.10206673, -0.2885648 , -0.17879382],\n",
+       "        [ 0.05066395,  0.03057829, -0.20014966,  0.16323143,\n",
+       "         -0.30297625, -0.26014242,  0.00136679,  0.01989788,\n",
+       "          0.2598066 , -0.17791292, -0.2645678 , -0.05848719,\n",
+       "          0.04678506,  0.22412732,  0.26115838, -0.18124466,\n",
+       "          0.20410272, -0.12641312, -0.19731031, -0.07883541,\n",
+       "         -0.2633432 ,  0.0881359 ,  0.097027  , -0.23396692,\n",
+       "         -0.11122917, -0.30443415, -0.11736332,  0.02083039,\n",
+       "         -0.30041423,  0.04163969, -0.2622295 ,  0.11583009]],\n",
+       "\n",
+       "       [[ 0.02983004, -0.16215569, -0.28702456,  0.04781085,\n",
+       "          0.10703558,  0.07883993,  0.15912026, -0.02661401,\n",
+       "         -0.22501421,  0.30170962,  0.29040274, -0.00197744,\n",
+       "          0.13058838,  0.20977983,  0.03754261,  0.07003441,\n",
+       "          0.03972226,  0.12746337,  0.13691044,  0.0680539 ,\n",
+       "         -0.17670184, -0.01111594,  0.22568122,  0.10387275,\n",
+       "          0.01304373,  0.26574603, -0.03780323,  0.18931755,\n",
+       "         -0.1433523 , -0.04164034,  0.12762433, -0.07176298],\n",
+       "        [ 0.05066395,  0.03057829, -0.20014966,  0.16323143,\n",
+       "         -0.30297625, -0.26014242,  0.00136679,  0.01989788,\n",
+       "          0.2598066 , -0.17791292, -0.2645678 , -0.05848719,\n",
+       "          0.04678506,  0.22412732,  0.26115838, -0.18124466,\n",
+       "          0.20410272, -0.12641312, -0.19731031, -0.07883541,\n",
+       "         -0.2633432 ,  0.0881359 ,  0.097027  , -0.23396692,\n",
+       "         -0.11122917, -0.30443415, -0.11736332,  0.02083039,\n",
+       "         -0.30041423,  0.04163969, -0.2622295 ,  0.11583009],\n",
+       "        [-0.05985726,  0.00243747, -0.24709015, -0.06607522,\n",
+       "         -0.15851544, -0.00227016, -0.21131991,  0.16945201,\n",
+       "         -0.1540303 ,  0.12721136, -0.19546618, -0.06724542,\n",
+       "          0.05696294,  0.23455265, -0.20354068,  0.08565512,\n",
+       "         -0.24144283, -0.2833395 , -0.09890223, -0.22305942,\n",
+       "          0.22087654, -0.25269154,  0.14626807, -0.20269841,\n",
+       "         -0.02899206, -0.25739598, -0.22183615, -0.2704598 ,\n",
+       "          0.29074255,  0.07005033,  0.29857358, -0.26034033],\n",
+       "        [ 0.05066395,  0.03057829, -0.20014966,  0.16323143,\n",
+       "         -0.30297625, -0.26014242,  0.00136679,  0.01989788,\n",
+       "          0.2598066 , -0.17791292, -0.2645678 , -0.05848719,\n",
+       "          0.04678506,  0.22412732,  0.26115838, -0.18124466,\n",
+       "          0.20410272, -0.12641312, -0.19731031, -0.07883541,\n",
+       "         -0.2633432 ,  0.0881359 ,  0.097027  , -0.23396692,\n",
+       "         -0.11122917, -0.30443415, -0.11736332,  0.02083039,\n",
+       "         -0.30041423,  0.04163969, -0.2622295 ,  0.11583009],\n",
+       "        [ 0.05066395,  0.03057829, -0.20014966,  0.16323143,\n",
+       "         -0.30297625, -0.26014242,  0.00136679,  0.01989788,\n",
+       "          0.2598066 , -0.17791292, -0.2645678 , -0.05848719,\n",
+       "          0.04678506,  0.22412732,  0.26115838, -0.18124466,\n",
+       "          0.20410272, -0.12641312, -0.19731031, -0.07883541,\n",
+       "         -0.2633432 ,  0.0881359 ,  0.097027  , -0.23396692,\n",
+       "         -0.11122917, -0.30443415, -0.11736332,  0.02083039,\n",
+       "         -0.30041423,  0.04163969, -0.2622295 ,  0.11583009],\n",
+       "        [ 0.05066395,  0.03057829, -0.20014966,  0.16323143,\n",
+       "         -0.30297625, -0.26014242,  0.00136679,  0.01989788,\n",
+       "          0.2598066 , -0.17791292, -0.2645678 , -0.05848719,\n",
+       "          0.04678506,  0.22412732,  0.26115838, -0.18124466,\n",
+       "          0.20410272, -0.12641312, -0.19731031, -0.07883541,\n",
+       "         -0.2633432 ,  0.0881359 ,  0.097027  , -0.23396692,\n",
+       "         -0.11122917, -0.30443415, -0.11736332,  0.02083039,\n",
+       "         -0.30041423,  0.04163969, -0.2622295 ,  0.11583009],\n",
+       "        [ 0.05066395,  0.03057829, -0.20014966,  0.16323143,\n",
+       "         -0.30297625, -0.26014242,  0.00136679,  0.01989788,\n",
+       "          0.2598066 , -0.17791292, -0.2645678 , -0.05848719,\n",
+       "          0.04678506,  0.22412732,  0.26115838, -0.18124466,\n",
+       "          0.20410272, -0.12641312, -0.19731031, -0.07883541,\n",
+       "         -0.2633432 ,  0.0881359 ,  0.097027  , -0.23396692,\n",
+       "         -0.11122917, -0.30443415, -0.11736332,  0.02083039,\n",
+       "         -0.30041423,  0.04163969, -0.2622295 ,  0.11583009],\n",
+       "        [ 0.05066395,  0.03057829, -0.20014966,  0.16323143,\n",
+       "         -0.30297625, -0.26014242,  0.00136679,  0.01989788,\n",
+       "          0.2598066 , -0.17791292, -0.2645678 , -0.05848719,\n",
+       "          0.04678506,  0.22412732,  0.26115838, -0.18124466,\n",
+       "          0.20410272, -0.12641312, -0.19731031, -0.07883541,\n",
+       "         -0.2633432 ,  0.0881359 ,  0.097027  , -0.23396692,\n",
+       "         -0.11122917, -0.30443415, -0.11736332,  0.02083039,\n",
+       "         -0.30041423,  0.04163969, -0.2622295 ,  0.11583009],\n",
+       "        [ 0.05066395,  0.03057829, -0.20014966,  0.16323143,\n",
+       "         -0.30297625, -0.26014242,  0.00136679,  0.01989788,\n",
+       "          0.2598066 , -0.17791292, -0.2645678 , -0.05848719,\n",
+       "          0.04678506,  0.22412732,  0.26115838, -0.18124466,\n",
+       "          0.20410272, -0.12641312, -0.19731031, -0.07883541,\n",
+       "         -0.2633432 ,  0.0881359 ,  0.097027  , -0.23396692,\n",
+       "         -0.11122917, -0.30443415, -0.11736332,  0.02083039,\n",
+       "         -0.30041423,  0.04163969, -0.2622295 ,  0.11583009],\n",
+       "        [ 0.05066395,  0.03057829, -0.20014966,  0.16323143,\n",
+       "         -0.30297625, -0.26014242,  0.00136679,  0.01989788,\n",
+       "          0.2598066 , -0.17791292, -0.2645678 , -0.05848719,\n",
+       "          0.04678506,  0.22412732,  0.26115838, -0.18124466,\n",
+       "          0.20410272, -0.12641312, -0.19731031, -0.07883541,\n",
+       "         -0.2633432 ,  0.0881359 ,  0.097027  , -0.23396692,\n",
+       "         -0.11122917, -0.30443415, -0.11736332,  0.02083039,\n",
+       "         -0.30041423,  0.04163969, -0.2622295 ,  0.11583009],\n",
+       "        [ 0.20626453, -0.05752146, -0.00224653,  0.21261898,\n",
+       "          0.19396898,  0.16105208,  0.29161546,  0.30252066,\n",
+       "         -0.00399569, -0.09008653,  0.11459213, -0.07958089,\n",
+       "         -0.11657375, -0.28686506, -0.06038658,  0.0260846 ,\n",
+       "          0.22458807,  0.13625583, -0.22306255, -0.18955788,\n",
+       "          0.24157074,  0.03718746,  0.24621478, -0.25198066,\n",
+       "         -0.22347829,  0.26222214,  0.15613481,  0.05522838,\n",
+       "          0.07044941, -0.07627638, -0.0554789 , -0.1824896 ],\n",
+       "        [ 0.20626453, -0.05752146, -0.00224653,  0.21261898,\n",
+       "          0.19396898,  0.16105208,  0.29161546,  0.30252066,\n",
+       "         -0.00399569, -0.09008653,  0.11459213, -0.07958089,\n",
+       "         -0.11657375, -0.28686506, -0.06038658,  0.0260846 ,\n",
+       "          0.22458807,  0.13625583, -0.22306255, -0.18955788,\n",
+       "          0.24157074,  0.03718746,  0.24621478, -0.25198066,\n",
+       "         -0.22347829,  0.26222214,  0.15613481,  0.05522838,\n",
+       "          0.07044941, -0.07627638, -0.0554789 , -0.1824896 ]]],\n",
+       "      dtype=float32)>"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trainer.train_step(batch=batch, beta=0, lang=None, video=None, bulk=None)"
+    "plan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=12.530062>"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainer.test_step(batch=batch, beta=0, lang=None, video=None, bulk=None)"
    ]
   },
   {
