--- a/notebooks/Deploy.ipynb
+++ b/notebooks/Deploy.ipynb
@@ -66,6 +66,7 @@
     "parser.add_argument('-i2', '--images2', default=False, action='store_true')\n",
     "parser.add_argument('-gi', '--gripper_images', default=False, action='store_true')\n",
     "parser.add_argument('-cnn', '--cnn_type', type=str, default=\"spatial_softmax\")\n",
+    "parser.add_argument('-if', '--init_from', type=str, default=\"init_from\")\n",
     "parser.add_argument('-sim', '--sim', default='Unity', help='Unity/Pybullet')\n",
     "parser.add_argument('-vq', '--discrete', default=False, action='store_true')\n",
     "parser.add_argument('-tmp', '--temperature', type=float, default=0.1)\n",
