--- a/notebooks/Deploy.ipynb
+++ b/notebooks/Deploy.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,18 +394,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Namespace(actor_layer_size=32, batch_size=2, beta=3e-05, bucket_name='lfp_europe_west4_a', bulk_datasets=None, bulk_split=0, cnn_type='intensities_spatial_softmax', codebook_size=32, colab=True, data_source='DRIVE', device='GPU', discrete=True, encode_all=True, encoder_layer_size=16, fp16=False, from_tfrecords=True, gcbc=False, goal_mapper_layer_size=512, goal_space_dim=32, gripper_images=False, gripper_img_embedding_size=32, images=True, images2=False, img_embedding_size=64, lang_split=0, latent_dim=32, learning_rate=0.0003, normalize=False, num_distribs=5, planner_layer_size=16, qbits=None, resume=False, run_name='pybullet_2048_b002_lim_intensities_spatial_softmax', sentence_embedding_size=512, sim='Pybullet', standard_split=0, sub_out_language_percent=0.25, temperature=0.1, test_datasets=['pybullet/UR5_slow_gripper_test'], tpu_name=None, train_datasets=['pybullet/UR5', 'pybullet/UR5_high_transition', 'pybullet/UR5_slow_gripper'], train_steps=200000, use_contrastive=False, use_language=False, video_datasets=None, video_split=0, vq_reduction=2, window_size_max=48, window_size_min=20)"
-      ]
-     },
-     "execution_count": 159,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'lfp' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-91e13c6ccb12>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mimportlib\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mreload\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mreload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlfp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mreload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlfp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mreload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlfp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mreload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlfp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mVQ\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'lfp' is not defined"
+     ]
     }
    ],
    "source": [
